--- a/styleR.css
+++ b/styleR.css
@@ -5,7 +5,7 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         body {
-            background: url(fondoRn.png) no-repeat center center/cover;
+            background: url(img/fondoRn.png) no-repeat center center/cover;
             height: 100vh;
             display: flex;
             align-items: center;
