--- a/css/inicio.css
+++ b/css/inicio.css
@@ -6,7 +6,7 @@
 
     body {
      font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background: url(/img/fondoInicio.jpg)
+  background: url(../img/fondoInicio.jpg)
               no-repeat center top / cover;
   background-attachment: fixed; /* hace que la imagen no se mueva */
   color: white;
