--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@
     }
 
     body {
-      background: url(/img/Balon.png) no-repeat center center/cover;
+      background: url(../img/Balon.png) no-repeat center center/cover;
       height: 100vh;
       display: flex;
       align-items: center;
